# handwritten-notetaking-editor

./: .gitignore  Cargo.toml  README.md  shell.nix
src/: application.rs  datatypes.rs  main.rs
