[package]
name = "handwritten-notetaking-editor"
version = "0.1.0"
authors = ["st170001 <st170001@stud.uni-stuttgart.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.10.3"

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
