[package]
name = "handwritten-notetaking-editor"
version = "0.1.0"
authors = ["st170001 <st170001@stud.uni-stuttgart.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.10.3"
rand = "0.8.2"
gdk = "0.13.2"
gtk = "0.9.2"
gio = "0.9.1"
