[package]
name = "handwritten-notetaking-editor"
version = "0.1.0"
authors = ["st170001 <st170001@stud.uni-stuttgart.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.9.1", features = ["png"] }
gdk = "0.13.2"
gio = "0.9.1"
glib = "0.10.3"
gtk = "0.9.2"
rand = "0.8.2"
serde = {version = "1.0.120", features = ["derive"]}
serde_json = "1.0.61"